# Codex-NLP-toolbox

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTENT_ROADMAP.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  ROADMAP.md  app.py  app_i18n.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  hf-space.yml  release.yml
.streamlit/: config.toml
data/samples/: README.md  candide_fr.txt  dom_casmurro_pt.txt  promessi_sposi_it.txt  quijote_es.txt  verwandlung_de.txt
docs/: Codex_NLP_Content_Strategy_and_Pilot_Decisions.md  architecture.md  benchmarks.md  error-analysis.md  resources.md
docs/adr/: 0001-mit-license.md  0002-uv-pep621.md  0003-no-ml-dependencies.md  0004-frozen-eval-datasets.md  0005-streamlit-cloud-deploy.md
docs/course/: syllabus.md
docs/course/aula-04/: exercicios.md  preset.md
docs/handbook/: deteccao-de-idioma.md
evals/: DATASETS.md  __init__.py  metrics.py  probes.py  report.py  run.py
evals/datasets/: langid.tsv  segmentation_en.txt  sentiment_en.tsv
evals/results/: langid.json  segmentation.json  sentiment.json
nlp_toolbox/: __init__.py  cli.py  languages.py  tools.py
nlp_toolbox/resources/: __init__.py
nlp_toolbox/resources/ngram_profiles/: PROVENANCE.md  __init__.py  de.txt  en.txt  es.txt  fr.txt  it.txt  pt.txt
nlp_toolbox/resources/sentiment/: __init__.py  de_negative.txt  de_positive.txt  en_negative.txt  en_positive.txt  es_negative.txt  es_positive.txt  fr_negative.txt  fr_positive.txt  it_negative.txt  it_positive.txt  pt_negative.txt  pt_positive.txt
nlp_toolbox/resources/stopwords/: __init__.py  de.txt  en.txt  es.txt  fr.txt  it.txt  pt.txt
scripts/: build_ngram_profiles.py
tests/: test_adversarial.py  test_cli.py  test_evals_metrics.py  test_i18n.py  test_languages.py  test_lesson_presets.py  test_properties.py  test_tools.py
