[project]
name = "codex-nlp-toolbox"
version = "0.1.0"
description = "A reproducible, evaluation-driven NLP toolbox for transparent linguistic baselines"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Bruno Guide", email = "bruno.fguide@gmail.com" }]
requires-python = ">=3.10,<3.14"
keywords = ["nlp", "baselines", "interpretability", "evaluation", "education"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "streamlit>=1.32",
]

[project.urls]
Repository = "https://github.com/grunobuide/Codex-NLP-toolbox"
Issues = "https://github.com/grunobuide/Codex-NLP-toolbox/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nlp_toolbox"]

[tool.pytest.ini_options]
testpaths = ["tests"]
