[project]
name = "codex-nlp-toolbox"
version = "1.0.0"
description = "A reproducible, evaluation-driven NLP toolbox for transparent linguistic baselines"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Bruno Guide", email = "bruno.fguide@gmail.com" }]
requires-python = ">=3.10,<3.14"
keywords = ["nlp", "baselines", "interpretability", "evaluation", "education"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "streamlit>=1.32",
]

[project.scripts]
codex-nlp = "nlp_toolbox.cli:main"

[project.urls]
Repository = "https://github.com/grunobuide/Codex-NLP-toolbox"
Issues = "https://github.com/grunobuide/Codex-NLP-toolbox/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "hypothesis>=6.100",
]
evals = [
    "langdetect>=1.0.9",
    "vaderSentiment>=3.3.2",
    "pysbd>=0.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nlp_toolbox"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=nlp_toolbox --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
branch = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["nlp_toolbox"]
